--- a/app/assets/stylesheets/pages/restaurants/sidebar.css.scss
+++ b/app/assets/stylesheets/pages/restaurants/sidebar.css.scss
@@ -3,8 +3,8 @@
 
 @mixin sidebar {
   @include box-sizing(border-box);
+  width: 20%;
   -webkit-flex: 0 0 auto;
-  width: 250px;
   padding: 10px 0 0 10px;
   margin-left: 30px;
   border-left: 1px solid #ccc;
